# MemeOver

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.bot  README.md  biome.json  docker-compose.yml  package.json  skills-lock.json
.github/workflows/: app.yml  bot.yml  deploy-site.yml  lint.yml  overlay.yml
app/: README.md  components.json  index.html  overlay.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.css  main-overlay.tsx  main-settings.tsx  routeTree.gen.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
back/: go.mod  go.sum  main.go
back/bot/: bot.go
bot/: .env  .env.example  .gitignore  Dockerfile  README.md  discord.go  go.mod  go.sum  main.go  package.json  tsconfig.json  types.go  utils.go  websocket.go
bot/src/: bot.ts  index.ts  server.ts
discord-bot/: Dockerfile  README.md  package.json  server.ts
discord-bot/src/: bot.ts
discord-bot/types/: message.ts
discord-bot/utils/: commands.ts  id.ts  messages.ts  users.ts
docker/: dockerfile
memeover-app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
memeover-app/src/: App.css  App.tsx  main.tsx
memeover-app/src-tauri/: Cargo.toml  tauri.conf.json
overlay/: README.md  biome.json  forge.config.ts  forge.env.d.ts  index.html  index.js  package.json  pnpm-lock.yaml  settings.html  tailwind.config.js  vite.base.config.ts  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
overlay/src/: App.tsx  SettingsApp.tsx  appWindow.ts  index.css  main.ts  main.tsx  preload.ts  renderer.ts  settings.tsx
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/src/: lib.rs
shared/: package.json  tsconfig.json
site/: astro.config.mjs  package.json  tsconfig.json  wrangler.toml
site/src/: env.d.ts
(+149 files in other folders)
